Edit code according to style guide Change ArrayList to LinkedList